--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -5,7 +5,7 @@ on:
       - main
 jobs:
   test:
-    runs-on: ubuntsu-latest
+    runs-on: ubuntu-latest
     steps:
       - name: checkout
         uses: actions/checkout@v2
@@ -14,4 +14,4 @@ jobs:
       - name: Run unit tests
         run: npm test
         env:
-          SQLITE_DB_LOCATION: /tmp/todo/db
+          SQLITE_DB_LOCATION: /tmp/todo.db
