--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -15,3 +15,28 @@ jobs:
         run: npm test
         env:
           SQLITE_DB_LOCATION: /tmp/todo.db
+
+name: docker hub
+on:
+  push:
+    branches:
+      - 'main'
+jobs:
+  docker:
+    runs-on: ubuntu-latest
+    steps:
+     -
+      name: Set up QEMU
+      uses: docker/setup-qemu-action@v3
+     -
+      name: Set up Docker Buildx
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+     -
+      name: Build and push
+      uses: docker/build-push-action@v5
+      with:
+        push: true
+        tags: ${{ secrets.DOCKERHUB_USERNAME }}/todo:latest
